--- a/public/views/resource.html
+++ b/public/views/resource.html
@@ -86,7 +86,7 @@
             <a  class="file pull-right" id="selectF2">选择文件
                 <input multiple type="file" name="files" id="file2" class="fileA">
             </a>
-            <a href="javascript:;" id="uploadfile" class="file pull-right" style="display: none">开始上传
+            <a href="javascript:;" id="uploadfile" class="file pull-right" >开始上传
                 <input type="" name="" id="st">
             </a>
             <div class="form-group">
