--- a/public/views/resource.html
+++ b/public/views/resource.html
@@ -73,12 +73,12 @@
             <h3>资源分享:</h3>
         </div>
         <div class="col-md-6 col-sm-12 downfile ">
-            <input type ="file" id="ImportPicInput" name= "myfile" style=" display: none" />
-            <div class ="input-append">
-                <label for ="importPicName"> 上传文件：</label >
-                <input type ="text" class="input-large" id= "importPicName" />
-                <a class ="btn btn-default" id="openR" > 打开</a>
-            </div >
+            <!--<input type ="file" id="ImportPicInput" name= "myfile" style=" display: none" />-->
+            <!--<div class ="input-append">-->
+                <!--<label for ="importPicName"> 上传文件：</label >-->
+                <!--<input type ="text" class="input-large" id= "importPicName" />-->
+                <!--<a class ="btn btn-default" id="openR" > 打开</a>-->
+            <!--</div >-->
             <div id="uploadArr">
                 <a  class="file pull-right" id="selectF">选择文件
                     <input multiple="multiple" type="file" name="files" id="file1" class="fileA" onchange="addNew(this)">
