文件导出修复

--- a/public/views/planList.html
+++ b/public/views/planList.html
@@ -103,7 +103,7 @@ Purchase: http://wrapbootstrap.com
                     <div class="widget-body">
                         <div class="table-toolbar">
                             <div class="widget" id="student">
-                                <a href="javascript:;" class="btn btn-primary pull-right" id="exportW" onclick="exprotT()">导出为word</a>
+                                <a  class="btn btn-primary pull-right" id="exportW" >导出为word</a>
                                 <br/>
                             </div>
                             <table class="table table-striped table-hover table-bordered" id="editabledatatable">
