--- a/public/views/userInfo.html
+++ b/public/views/userInfo.html
@@ -284,7 +284,7 @@
         </div>
     </div>
     <div class="col-md-5">
-            <img src="{{avatar}}" width="200px" height="200px">
+            <img src="{{avatar}}" width="200px" height="200px" id="avatar">
     </div>
 </div>
 </script>
