--- a/public/views/activity.html
+++ b/public/views/activity.html
@@ -1,16 +1,20 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <title>Home</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Rest Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+<meta name="keywords" content="Rest Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="applijewelleryion/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<link href="../editor/activity/css/bootstrap.css" rel='stylesheet' type='text/css' />
+<!--<link href="../editor/activity/css/bootstrap.css" rel='stylesheet' type='text/css' />-->
 <!-- Custom Theme files -->
-<link href="../editor/activity/css/style.css" rel='stylesheet' type='text/css' />
-<script src="../editor/activity/js/jquery-1.11.1.min.js"></script>
+<!--<link href="../editor/activity/css/style.css" rel='stylesheet' type='text/css' />-->
+	<script src="../lib/jquery/jquery.min.js"></script>
+
 	<!-- Bootstrap core CSS -->
 	<link href="../lib/bootstrap/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -61,6 +65,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul class="dropdown-menu">
 						<li><a href="myArticles.html">我的文章</a></li>
 						<li><a href="userInfo.html">个人档案</a></li>
+						<li><a href="modifyPassword.html">修改密码</a></li>
 					</ul>
 				</li>
 				<li id="logout"><a href="login.html">退出</a></li>
@@ -72,7 +77,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </nav>
 
-<div class="container">
+<div class="container galleryContainer">
 	<section style="margin-top: 35px;">
 	<!--light-box-files -->
 		<script src="../editor/activity/js/jquery.chocolat.js"></script>
@@ -85,7 +90,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</script>
 		<!--上传图文-->
 
-	<!--gallery-starts--> 
+	<!--gallery-starts-->
 	<div class="gallery" id="gallery">
 		<div class="container">
 			<div class="row" >
@@ -185,7 +190,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="clearfix"></div>
 			</div>
 		</div>
-	</div>	
+	</div>
 	<!--gallery-->
 	</section>
 </div>
