--- a/public/views/markdownEditor.html
+++ b/public/views/markdownEditor.html
@@ -12,35 +12,11 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <link rel="icon" href="../images/favicon.ico">
-    <link type="text/css" rel="stylesheet" href="../lib/materialize/materialize.min.css" media="screen,projection"/>
+    <link href="https://cdn.bootcss.com/materialize/0.100.2/css/materialize.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../editor/css/editormd.css"/>
+    <link rel="stylesheet" href="../styles/markdownEditor.css">
     <title>文章编辑</title>
-    <style>
-        body{
-            background-color: #222222;
-            padding: 50px;
-        }
-        .editormd-code-toolbar select {
-            max-width: 36%;
-            display: inline;
-            height: 2.5em;
-        }
-
-        .editormd-form input[type="text"], .editormd-form input[type="number"]{
-            padding: 0;
-        }
-
-        .editormd-form input[type="text"]{
-            height:2.5em;
-            box-sizing: border-box;
-            margin: 0 0 5px 0;
-            border-radius:3px;
-        }
-
-
-    </style>
-    <!--Beyond styles-->
 
 </head>
 <body>
@@ -54,11 +30,7 @@
                 <div class="card  blue-grey darken-1">
                     <div class="card-content white-text">
                         <span class="card-title">发布</span>
-                        <div>
-                            <a class="btn" onclick="selectThis(this)">文章</a>
-                            <a class="btn" onclick="selectThis(this)">公告</a>
-                        </div>
-                        <div class="form-horizontal form-bordered" id="articleF" hidden>
+                        <div class="form-horizontal form-bordered" id="articleF">
                             <div class="row">
                                 <div class="input-field col s12">
                                     <input type="text" name="artTitle" id="artTitle" value="" class="validate">
@@ -66,53 +38,10 @@
                                 </div>
                             </div>
                             <input type="hidden" id="articleId" value="">
-                            <!-- <div class="row">
-                                 <div class="input-field col s12">
-                                     <input type="text" name="label" id="label" value="" class="validate">
-                                     <label for="label">标签（多个用，隔开）</label>
-                                 </div>
-                             </div>
-
-                        <div class="form-group">
-                                 <div class="col-sm-offset-2 col-sm-10">
-                                     <div class="col-xs-8">
-                                         <div class="file-field input-field">
-                                             <input type="file" accept="image/gif,image/jpeg,image/jpg,image/png,image/svg" id="file" name="file">
-                                         <div class="file-path-wrapper">
-                                             <input class="file-path validate" type="text" id="coverName" value="">
-                                             <label for="file">请选择封面图片</label>
-                                          </div>
-                                         </div>
-                                     </div>
-                                     <button style="background-color: #2bbbad;border-width:1px;" onclick="uploadCover()" >上传封面</button>
-                                     <input type="hidden" id="coverAddress">
-                                 </div>
-                             </div>-->
                         </div>
 
-                        <div class="form-horizontal form-bordered" id="noticeF" hidden>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input type="text" name="artTitle" id="notTitle"  class="validate">
-                                    <label for="artTitle">公告标题：</label>
-                                </div>
-                            </div>
-                            <input type="hidden" id="notieId" >
-                            <div class="form-group">
-                                <div class="col-sm-offset-2 col-sm-10">
-                                    <div class="col-xs-8">
-                                        <label>
-                                            <input class="checkbox-slider colored-blue" type="checkbox" onchange="change()"
-                                                   id="ispublic">
-                                            <span class="text">公开</span>
-                                        </label>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
                     </div>
-                    <div class="card-action" id="sub" hidden>
+                    <div class="card-action" id="sub">
                         <a class="waves-effect waves-light red-text darken-2" data-dismiss="modal" onclick="cancel()">
                             取消
                         </a>
@@ -129,7 +58,7 @@
     </div>
     <!-- /Page Body -->
     <div class="fixed-action-btn" style="bottom: 100px; right: 30px;">
-        <a class="waves-effect waves-light btn-floating btn-large green tooltipped" data-position="left" data-delay="5" data-tooltip="保存" id="submit">
+        <a class="waves-effect waves-light btn-floating btn-large green tooltipped" data-position="left" data-delay="5" data-tooltip="发布" id="submit">
             <i class="fa fa-location-arrow"></i>
         </a>
         <ul>
